# Monkey-Typer-cpp

./: CMakeLists.txt  Cofig.cpp  Cofig.h  FontLoad.cpp  FontLoad.h  Game.cpp  Game.h  PointSystem.cpp  PointSystem.h  README.md  WordLoad.cpp  WordLoad.h  main.cpp
Assets/Words/: Words.txt
Assets/easter eggs/Your fate/: words.txt
Assets/easter eggs/rick/: words.txt
